--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,8 @@
 {
   "name": "kushangipanchal/module",
-  "description": "The MagentoCoders module allows creating, editing and managing banner sliders with different content type.",
-  "minimum-stability": "dev",
-  "require": {
-    "magento/module-store": "100.2.*",
-    "magento/module-theme": "100.2.*",
-    "magento/framework": "101.0.*"
-  },
+  "description": "",
   "type": "magento2-module",
   "version": "1.0.0",
-  "license": [
-    "OSL-3.0",
-    "AFL-3.0"
-  ],
   "autoload": {
     "files": [
       "registration.php"
